fix import export menu animation so that it isnt clickable when not visible

--- a/ClientApp/src/components/DashBoard/Safe/ImportExportMenu/ImportExportMenu.css
+++ b/ClientApp/src/components/DashBoard/Safe/ImportExportMenu/ImportExportMenu.css
@@ -1,4 +1,5 @@
 #import_export_menu {
+    display: none;
     opacity: 0;
     position: absolute;
     left: 50%;
